# mrkgeant

./: .gitignore  CMakeLists.txt  FindROOT.cmake  GNUmakefile  README.md  mrkgeant.cbp  mrkgeant.cc  mrkgeant.depend  mrkgeant.layout
data/: 3BRandomNumbers.txt  4BRandomNumbers.txt  EventSettings_STD_3B_130429.root  Fluxmap_RDK2_Matt1.txt  Fluxmap_RDK2_Matt1_Expanded.txt
include/: GeneratorMessenger.hh  MRKBAPDDetector.hh  MRKBField.hh  MRKBGODetector.hh  MRKConstants.hh  MRKDetectorConstruction.hh  MRKDetectorConstruction_old.txt  MRKDetectorMessenger.hh  MRKEField.hh  MRKElementField.hh  MRKEventAction.hh  MRKEvents.hh  MRKField.hh  MRKFieldMessenger.hh  MRKGeneratorMessenger.hh  MRKGeometry.hh  MRKGlobalField.hh  MRKHit.hh  MRKMacroMessenger.hh  MRKMaterials.hh  MRKMirror.hh  MRKPhys.hh  MRKPhysicsList.hh  MRKPhysicsListMessenger.hh  MRKPrimaryGeneratorAction.hh  MRKRDKIIGeometry.hh  MRKROOTField.hh  MRKRun.hh  MRKRunAction.hh  MRKRunActionMessenger.hh  MRKSBDField.hh  MRKSBDOnlyGeometry.hh  MRKSolenoid.hh  MRKStepMax.hh  MRKStepMaxMessenger.hh  MRKSteppingAction.hh  MRKSteppingVerbose.hh  MRKSurfaceBarrierDetector.hh  MRKText.hh  MRKVField.hh  (+10 more)
macros/PRL2016Run/: RID533_0.mac  RID534_0.mac  RID535_0.mac  RID536_0.mac  RID537_0.mac
macros/SBDOnlyTestExample/: SBDOnly_E_4.10.02_GS.mac  SBDOnly_E_4.10.02_Penelope.mac  SBDOnly_E_4.10.02_SingleScatter.mac  SBDOnly_E_4.10.02_WVI.mac
misc/: RDK2_Geometry_R14.xls
src/: GeneratorMessenger.cc  MRKBAPDDetector.cc  MRKBField.cc  MRKBGODetector.cc  MRKDetectorConstruction.cc  MRKDetectorMessenger.cc  MRKEField.cc  MRKElementField.cc  MRKEventAction.cc  MRKEvents.cc  MRKField.cc  MRKFieldMessenger.cc  MRKGeneratorMessenger.cc  MRKGeometry.cc  MRKGlobalField.cc  MRKHit.cc  MRKMacroMessenger.cc  MRKMaterials.cc  MRKMirror.cc  MRKPhys.cc  MRKPhysicsList.cc  MRKPhysicsListMessenger.cc  MRKPrimaryGeneratorAction.cc  MRKRDKIIGeometry.cc  MRKROOTField.cc  MRKRun.cc  MRKRunAction.cc  MRKRunActionMessenger.cc  MRKSBDField.cc  MRKSBDOnlyGeometry.cc  MRKSolenoid.cc  MRKStepMax.cc  MRKStepMaxMessenger.cc  MRKSteppingAction.cc  MRKSteppingVerbose.cc  MRKSurfaceBarrierDetector.cc  MRKText.cc  MRKVField.cc  MRKVector.cc  PhysListEmStandard.cc  (+11 more)
